--- a/index.html
+++ b/index.html
@@ -96,58 +96,28 @@
     <!-- Skills Section-->
     <div id="skills" class="section">
       <div class="sectionTitle"><h2>Skills</h2></div>
-      <ul id="skillSet" class="list-group list-group-horizontal">
-        <li>
-          <a href="#">
-            <img
-              class="skill-icon list-group-item flex-fill"
-              src="./assets/html5.svg"
-              alt=""
-            />
-            <h5>HTML & CSS</h5>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img
-              class="skill-icon list-group-item flex-fill"
-              src="./assets/javascript.svg"
-              alt=""
-            />
-            <h5>Javascript</h5>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img
-              class="skill-icon list-group-item flex-fill"
-              src="./assets/adobephotoshop.svg"
-              alt=""
-            />
-            <h5>Photoshop</h5>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img
-              class="skill-icon list-group-item flex-fill"
-              src="./assets/github.svg"
-              alt=""
-            />
-            <h5>GitHub</h5>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img
-              class="skill-icon list-group-item flex-fill"
-              src="./assets/python.svg"
-              alt=""
-            />
-            <h5>Python</h5>
-          </a>
-        </li>
-      </ul>
+      <div id="skillBadges" class="container">
+        <ul class="icon-tab-nav tabs">
+          <li>
+            <a href="#" target="_blank" rel="noopener noreferrer">
+              <i class="fab fa-html5 fa-4x" aria-hidden="true"></i>
+              <h5>HTML & CSS3</h5>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank" rel="noopener noreferrer">
+              <i class="fab fa-js-square fa-4x"></i>
+              <h5>Javascript</h5>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank" rel="noopener noreferrer">
+              <i class="fab fa-js-square fa-4x"></i>
+              <h5>Adobe Photoshop</h5>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
     <!-- Projects Section -->
     <div id="projects" class="section">
