--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         </div>
         <div class="card">
           <img
-            src="./assets/Gringotts.JPG"
+            src="./assets/ATAT.JPG"
             class="card-img-top"
             alt="rock city photo"
           />
@@ -360,12 +360,14 @@
                 Interested in knowing me better
               </h5>
               <p class="card-text text-center">
-                <a
-                  class="resumeBtn"
-                  href="https://drive.google.com/file/d/1i7ooKOwAOvc60YFx4Hgv1qblNxXLXDuf/view?usp=sharing"
+                <button
+                  onclick="location.href= 'https://drive.google.com/file/d/1i7ooKOwAOvc60YFx4Hgv1qblNxXLXDuf/view?usp=sharing'"
                   target="_blank"
-                  >Download My Resume</a
+                  type="button"
+                  class="resumeBtn btn btn-outline-secondary"
                 >
+                  Download My Resume
+                </button>
               </p>
             </div>
           </div>
