--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="aboutMeText row">
           <div class="col-md-4">
             <p class="lead text-lg-center font-weight-bolder">
-              Hello, I'm Aj White, and I'm a web development student at
+              Hello, I'm Aj White. I'm a web development student at
               <a
                 class="link"
                 href="https://elevenfifty.org/"
@@ -111,9 +111,9 @@
           <div class="col-md-7">
             <p class="lead">
               I’ve spent a number of years working across different areas of
-              photography, and front-end development. I pride myself on being an
+              photography and front-end development. I pride myself on being an
               avid learner of technology and will not shy away from a new
-              challenge. You can see my code at
+              challenge. You can see my code here on
               <a
                 class="link"
                 style="color: aliceblue"
@@ -121,7 +121,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 >GitHub</a
-              >, and feel free to contact me at
+              >. Feel free to contact me at
               <a
                 class="link"
                 style="color: aliceblue"
@@ -132,9 +132,9 @@
               >.
             </p>
             <p class="lead">
-              When not working I can usually be found spending time outside in
-              my Jeep, being with my family, and playing with my dogs. I'm a fan
-              of all things 80's and make no efforts to hide it.
+              When not working, I can usually be found spending time with my
+              family, riding in my Jeep, and playing with my dogs. I'm a fan of
+              all things 80's and I make no efforts to hide it.
             </p>
           </div>
         </div>
