--- a/index.html
+++ b/index.html
@@ -144,23 +144,23 @@
     <div id="skills" class="section">
       <div class="sectionTitle"><h2>Skills</h2></div>
       <ul id="skillBadges" class="list-group-horizontal">
-        <li class="text-center">
+        <li class="skillIcon text-center">
           <i class="fab fa-html5 fa-4x" aria-hidden="true"></i>
           <h5>HTML & CSS3</h5>
         </li>
-        <li class="text-center">
+        <li class="skillIcon text-center">
           <i class="fab fa-js-square fa-4x"></i>
           <h5>Javascript</h5>
         </li>
-        <li class="text-center">
+        <li class="skillIcon text-center">
           <i class="fas fa-image fa-4x"></i>
           <h5>Adobe Photoshop</h5>
         </li>
-        <li class="text-center">
+        <li class="skillIcon text-center">
           <i class="fab fa-github-square fa-4x"></i>
           <h5>GitHub</h5>
         </li>
-        <li class="text-center">
+        <li class="skillIcon text-center">
           <i class="fab fa-python fa-4x"></i>
           <h5>Python</h5>
         </li>
