--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         </div>
         <div class="card">
           <img
-            src="./assets/ATAT.JPG"
+            src="./assets/Gringotts.JPG"
             class="card-img-top"
             alt="rock city photo"
           />
