--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <a
                 class="link"
                 style="color: aliceblue"
-                href="https://www.linkedin.com/in/aaronj-white/"
+                href="https://www.linkedin.com/in/aaronj-white"
                 target="_blank"
                 rel="noopener noreferrer"
                 >Linkedin</a
@@ -380,7 +380,7 @@
         <div class="social container-fluid justify-content-around">
           <a
             class="socialIcons"
-            href="https://www.linkedin.com/in/aaronj-white/"
+            href="https://www.linkedin.com/in/aaronj-white"
             target="_blank"
             rel="noopener noreferrer"
           >
