--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
               </h5>
               <p class="card-text text-center">
                 <button
-                  onclick="location.href= 'https://drive.google.com/file/d/1i7ooKOwAOvc60YFx4Hgv1qblNxXLXDuf/view?usp=sharing"
+                  onclick="location.href= 'https://drive.google.com/file/d/1i7ooKOwAOvc60YFx4Hgv1qblNxXLXDuf/view?usp=sharing'"
                   target="_blank"
                   type="button"
                   class="resumeBtn btn btn-outline-secondary"
