changed css creature

--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
       <!-- Enter Card Code -->
       <div class="card-columns">
         <div class="card">
-          <a href="https://codepen.io/aaronjwhite/pen/LYZMNej" target="_blank">
+          <a href="https://codepen.io/aaronjwhite/full/LYZMNej" target="_blank">
             <img
-              src="./assets/CSS Creature.png"
+              src="./assets/css_creature.png"
               class="project-img card-img-top"
               alt="CSS Creature"
           /></a>
