Added Beast mode project

--- a/index.html
+++ b/index.html
@@ -171,7 +171,27 @@
       <div class="sectionTitle"><h2>Projects</h2></div>
       <!-- Enter Card Code -->
       <div class="card-columns">
-        <div class="card">
+        <div class="card text-center">
+          <a
+            href="https://beastmode-client.herokuapp.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img
+              src="./assets/Beast_Mode.png"
+              class="project-img card-img-top"
+              alt="Beast-Mode-Web-App"
+            />
+          </a>
+          <div class="card-body bg-dark text-white">
+            <h5 class="card-title">Beast Mode Web App</h5>
+            <p class="card-text">
+              This was a group built project using React and Bootstrap.
+            </p>
+          </div>
+        </div>
+
+        <div class="card text-center">
           <a href="https://codepen.io/aaronjwhite/full/LYZMNej" target="_blank">
             <img
               src="./assets/css_creature.png"
@@ -179,7 +199,7 @@
               alt="CSS Creature"
           /></a>
           <div class="card-body bg-dark text-white">
-            <h5 class="card-title text-center">CSS Creature</h5>
+            <h5 class="card-title">CSS Creature</h5>
             <p class="card-text">
               This is a simple CSS creature design that was originally created
               on my second day of class.
@@ -203,7 +223,7 @@
             alt="rock city photo"
           />
         </div>
-        <div class="card">
+        <div class="card text-center">
           <a
             href="https://xaaronwx.github.io/API-Project/"
             target="_blank"
@@ -261,7 +281,7 @@
             alt="foggy road photo"
           />
         </div>
-        <div class="card">
+        <div class="card text-center">
           <a
             href="https://xaaronwx.github.io/MyTinDogProject/"
             target="_blank"
